--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -10,7 +10,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /order {
+    location /orderForm {
+        try_files $uri $uri/ /orderForm/index.html;
+    }
+
+    location /orderSubmit {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-NginX-Proxy true;
@@ -20,6 +24,7 @@ server {
         proxy_redirect off;
         proxy_pass http://backend:3000;
     }
+
 
     #error_page  404              /404.html;
 
