--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -10,8 +10,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /orderForm {
+    location /order {
         try_files $uri $uri/ /orderForm/index.html;
+    }
+
+    location /design {
+        try_files $uri $uri/ /designForm/index.html;
     }
 
     location /orderSubmit {
@@ -25,6 +29,16 @@ server {
         proxy_pass http://backend:3000;
     }
 
+    location /designSubmit {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_ssl_session_reuse off;
+        proxy_set_header Host $http_host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_redirect off;
+        proxy_pass http://backend:3000;
+    }
 
     #error_page  404              /404.html;
 
