update backend to mongoose 7.3.2

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /App
 COPY ./app.js .
 COPY ./models ./models
 COPY ./package.json .
-RUN npm install -g nodemon
+# RUN npm install -g nodemon
 RUN npm install
 EXPOSE 3000
-CMD ["nodemon", "app.js"]
+CMD ["node", "app.js"]
