--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:latest
 COPY ./dist /srv/http/example-app/dist
 COPY ./nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+RUN npm install
 EXPOSE 80
