--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "preview": "^0.1.3"
   }
 }
