--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -18,6 +18,10 @@ server {
         try_files $uri $uri/ /designForm/index.html;
     }
 
+    location /review {
+        try_files $uri $uri/ /orderReview/index.html;
+    }
+
     location /orderSubmit {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
