--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "preview": "^0.1.3"
   }
 }
