--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
