edit nginx config and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
 
   mongo:
     image: mongo
+    ports:
+      - "27017:27017"
     volumes:
       - orderdata:/data/db
       - configdb:/data/configdb
