--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "vite --host",
     "build": "vite build --emptyOutDir",
-    "preview": "vite preview --port 8080",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preview": "vite preview --port 8080"
   },
   "keywords": [],
   "author": "",
